<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menuItemBeachList"
        android:title="@string/beachList"
        android:icon="@drawable/beach_icon"/>

    <item android:id="@+id/menuItemAdvancedSearch"
        android:title="@string/advancedSearch"
        android:icon="@drawable/advanced_search_icon"/>

    <item android:id="@+id/menuItemSuggestions"
        android:title="@string/suggestions"
        android:icon="@drawable/suggestions_icon"/>

    <item android:id="@+id/menuItemProfile"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"/>

    <item android:id="@+id/menuItemLogin"
        android:title="@string/login"
        android:icon="@drawable/login_icon_menu"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menuItemLogout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>