<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="35dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/firstNameEditText"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/firstNameEditText"
        app:srcCompat="@drawable/name_info_icon" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="35dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/homeTownEditText"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/homeTownEditText"
        app:srcCompat="@drawable/location_info_icon" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="35dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/passwordEditText"
        app:layout_constraintEnd_toEndOf="@+id/imageView8"
        app:layout_constraintStart_toStartOf="@+id/imageView8"
        app:layout_constraintTop_toTopOf="@+id/passwordEditText"
        app:srcCompat="@drawable/password_icon" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/emailEditText"
        app:layout_constraintEnd_toStartOf="@+id/emailEditText"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="@+id/signinButton"
        app:layout_constraintTop_toTopOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/username_icon" />

    <TextView
        android:id="@+id/textViewAppTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/alegreya"
        android:text="@string/app_name_caps"
        android:textColor="@color/darkGray"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/homeTownEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/homeTown"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/lastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/lastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/lastNameEditText" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/firstNameEditText"
        app:layout_constraintStart_toStartOf="@+id/firstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/firstNameEditText" />

    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/textViewAppTitle2"
        app:layout_constraintStart_toStartOf="@+id/textViewAppTitle2"
        app:layout_constraintTop_toBottomOf="@+id/textViewAppTitle2" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/homeTownEditText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/homeTownEditText"
        app:layout_constraintTop_toBottomOf="@+id/divider4" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:password="true"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/emailEditText"
        app:layout_constraintStart_toStartOf="@+id/emailEditText"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <EditText
        android:id="@+id/confirmEditText"
        android:layout_width="226dp"
        android:layout_height="44dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/confirmPass"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:password="true"
        android:textColor="@color/lightCyan"
        android:textColorHint="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/passwordEditText"
        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="146dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/signup"
        android:textColor="@color/lightCyan"
        app:layout_constraintEnd_toEndOf="@+id/confirmEditText"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@+id/confirmEditText"
        app:layout_constraintTop_toBottomOf="@+id/confirmEditText" />

    <View
        android:id="@+id/divider4"
        android:layout_width="300dp"
        android:layout_height="4dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTownEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>