<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardBackgroundColor="#e5e5e5"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/textViewSuggestionsBeachName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/notDefined"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/ratingBarSuggestion"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:isIndicator="true"
                android:scaleX="0.7"
                android:scaleY="0.7"
                app:layout_constraintStart_toStartOf="@+id/textViewSuggestionsBeachName"
                app:layout_constraintTop_toBottomOf="@+id/textViewSuggestionsBeachName" />

            <TextView
                android:id="@+id/textViewNrVotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/notDefined"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toStartOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/votes"
                app:layout_constraintEnd_toEndOf="@+id/ratingBarSuggestion"
                app:layout_constraintStart_toStartOf="@+id/ratingBarSuggestion"
                app:layout_constraintTop_toBottomOf="@+id/ratingBarSuggestion" />

            <Button
                android:id="@+id/buttonDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viewComments"
                app:layout_constraintEnd_toEndOf="@+id/ratingBarSuggestion"
                app:layout_constraintStart_toStartOf="@+id/ratingBarSuggestion"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>